2009-08-28  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add function get_all_model_groups for to
	get all rows of table "tmodule_group".

2009-08-27  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_db.php,
	  godmode/agentes/modificar_agente.php,
	  godmode/agentes/manage_config_remote.php,
	  godmode/agentes/agent_manager.php: Remote config .conf and .md5 files
	  are now stored in different subdirectories.

2009-08-27  Miguel de Dios  <miguel.dedios@artica.es>

	* index.php: add comments for more readable.
	* include/functions_extensions.php, extensions/update_manager.php,
	extensions/hello, extensions/hello/icon.png, extensions/hello.php,
	operation/menu.php, godmode/menu.php: change the mecanic to add extensions
	into menu, now you can add extension with icon and into the submenu in any
	position of submenu. Change the example "hello" for to show as be.


2009-08-26  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/extensions.php, godmode/extensions.php: fix hidden bug that show
	a warning when try to show the extension that not is of operation or the
	other. And add feature can load invible (in menu) extensions.

2009-08-26  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_extensions.php: add the small description in the
	load_extensions function for phpdoc.

2009-08-26  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_menu.php, include/functions_html.php,
	include/functions_events.php, include/functions_messages.php,
	include/functions_modules.php, include/functions_exportserver.php,
	include/functions_reporting.php, include/functions_filemanager.php,
	include/pchart_graph.php, include/pandora_graph.php, include/auth/ldap.php,
	include/auth/mysql.php, include/config.inc.php,
	include/functions_networkmap.php, include/functions_servers.php,
	include/functions_network_profiles.php, include/gettext.php,
	include/functions_network_components.php, include/functions_visual_map.php,